# minishell

./: .gitignore  CMakeLists.txt  Makefile  bash1  file.txt  file1  file3  minishell  test  test2  test_2.txt
includes/: minishel.h  minishell.h  parser.h  struct.h
libft/: .gitignore  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max_bonus.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min_bonus.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp_bonus.c  ft_strcut_bonus.c  ft_strdup.c  ft_strfind_bonus.c  ft_strjoin.c  ft_strjoin_char.c  (+14 more)
minishell.dSYM/Contents/Resources/DWARF/: minishell
srcs/: check_function.c  exit.c  ft_pipe.c  ft_strcut.c  get_next_line.c  main.c  new_arg.c  parce_data.c  variables.c
srcs/clear/: clear.c  error.c
srcs/cmd/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_export_utils.c  ft_pwd.c  ft_unset.c
srcs/cmd_utils/: add_back_cmd.c  cmd_last.c  cmd_len.c
srcs/env/: conv_env.c  env_free.c  env_utils.c  env_utils_2.c  parser_env.c  util_env.c
srcs/general/: conv_envp.c  exit.c  ft_strcut.c  get_next_line.c  variables.c
srcs/init/: init.c
srcs/no_pipe_cmd/: execute_cmd.c  parser_cmd.c  run_cmd.c  start_command.c  start_execve_pipe.c
srcs/parser/: check_digit.c  check_function.c  convert.c  copy_array.c  exec_pipe_semic.c  new_arg.c  parce_data.c  parce_quotes.c  parser_begin.c  parser_cmd.c  parser_errors.c  parser_path.c  parser_quotes.c  parser_shielding.c  parser_string.c  parser_variables.c  syntax_errors.c  syntax_errors_utils.c  utils.c
srcs/pipe/: fd_utils.c  init_pipe.c  pipe_utils.c
srcs/redirect/: redir_utils.c  redirect.c
srcs/signals/: signals.c  signals_utils.c
