cmake_minimum_required(VERSION 3.17)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(includes)
include_directories(libft)

add_executable(minishell
        includes/minishell.h
        includes/struct.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_max_bonus.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min_bonus.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strcmp_bonus.c
        libft/ft_strdup.c
        libft/ft_strfind_bonus.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strstr_bonus.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        srcs/cmd/ft_cd.c
        srcs/cmd/ft_echo.c
        srcs/cmd/ft_env.c
        srcs/cmd/ft_exit.c
        srcs/cmd/ft_export.c
        srcs/cmd/ft_pwd.c
        srcs/cmd/ft_unset.c
        srcs/general/exit.c
        srcs/general/ft_strcut.c
        srcs/general/get_next_line.c
        srcs/general/variables.c
        srcs/parser/check_digit.c
        srcs/parser/check_function.c
        srcs/parser/copy_array.c
        srcs/parser/exec_pipe_semic.c
        srcs/parser/new_arg.c
        srcs/parser/parce_data.c
        srcs/parser/parce_quotes.c
        srcs/main.c)
