cmake_minimum_required(VERSION 3.17)
project(minishell_new C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(includes)
include_directories(libft)
include_directories(srcs)

add_executable(minishell_new
        includes/minishell.h
        includes/struct.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_max_bonus.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min_bonus.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strcmp_bonus.c
        libft/ft_strcut_bonus.c
        libft/ft_strdup.c
        libft/ft_strfind_bonus.c
        libft/ft_strjoin.c
        libft/ft_strjoin_char.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strstr_bonus.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        srcs/clear/clear.c
        srcs/clear/error.c
        srcs/cmd/ft_cd.c
        srcs/cmd/ft_echo.c
        srcs/cmd/ft_env.c
        srcs/cmd/ft_exit.c
        srcs/cmd/ft_export.c
        srcs/cmd/ft_export_utils.c
        srcs/cmd/ft_pwd.c
        srcs/cmd/ft_unset.c
        srcs/cmd_utils/add_back_cmd.c
        srcs/cmd_utils/cmd_last.c
        srcs/cmd_utils/cmd_len.c
        srcs/env/conv_env.c
        srcs/env/env_utils.c
        srcs/env/env_utils_2.c
        srcs/general/get_next_line.c
        srcs/general/variables.c
        srcs/init/init.c
        srcs/no_pipe_cmd/run_cmd.c
        srcs/no_pipe_cmd/start_command.c
        srcs/parser/convert.c
        srcs/parser/parser_errors.c
        srcs/parser/parser_path.c
        srcs/parser/parser_quotes.c
        srcs/parser/parser_shielding.c
        srcs/parser/parser_string.c
        srcs/parser/parser_variables.c
        srcs/parser/syntax_errors.c
        srcs/parser/syntax_errors_utils.c
        srcs/parser/utils.c
        srcs/pipe/fd_utils.c
        srcs/pipe/init_pipe.c
        srcs/redirect/redir_utils.c
        srcs/redirect/redirect.c
        srcs/signals/signals.c
        srcs/signals/signals_utils.c
        srcs/main.c)
